--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ devtools::install_github("DHLab-TSENG/dxpr")
 
 ## Overview
 
-<img src="https://github.com/DHLab-CGU/dhlab-cgu.github.io/blob/master/dxpr/image/overview.png?raw=true" style="display:block; margin:auto; width:100%;">
+<img src="https://raw.githubusercontent.com/DHLab-TSENG/dxpr/master/image/overview.png" style="display:block; margin:auto; width:100%;">
 
 ## Usage
 
