--- a/vignettes/Chi_Diagnosis.Rmd
+++ b/vignettes/Chi_Diagnosis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Get started with dxpr: Diagnosis (Chinese)"
+title: "Getting started with dxpr: Diagnosis (Chinese)"
 author: "Hsiang-Ju, Chiu"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
