--- a/vignettes/Chi_Procedure.Rmd
+++ b/vignettes/Chi_Procedure.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Get started with dxpr: Procedure (Chinese)"
+title: "Getting started with dxpr: Procedure (Chinese)"
 author: "Hsiang-Ju, Chiu"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
