--- a/vignettes/Eng_Procedure.Rmd
+++ b/vignettes/Eng_Procedure.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Get started with dxpr: Procedure"
+title: "Getting started with dxpr: Procedure"
 author: "Hsiang-Ju, Chiu"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
